Fix size inside datepicker on mobile

--- a/scss/components/_minicalendar.scss
+++ b/scss/components/_minicalendar.scss
@@ -1,6 +1,6 @@
 .minicalendar {
 	// Size of each cell width and height when `fixedSize`property is set.
-	--fixed-cell-size: 2em;
+	--fixed-cell-size: #{em(34)};
 
 	min-width: rem(150);
 	max-width: rem(400);
@@ -47,15 +47,26 @@
 				'weeknumbers rule monthdays';
 		}
 
-		&:not(.is-fixed-size) {
+		@include respond-to($breakpoint-small) {
 			// Ensure the aspect ratio while waiting for aspect-ratio property
 			--cell-width: auto;
 			--cell-height: var(--computed-cell-width, var(--fixed-cell-size));
 		}
 
-		&.is-fixed-size {
-			--cell-width: var(--fixed-cell-size);
-			--cell-height: var(--fixed-cell-size);
+		@include respond-to($breakpoint-small, 'min') {
+			&:not(.is-fixed-size) {
+				// Ensure the aspect ratio while waiting for aspect-ratio property
+				--cell-width: auto;
+				--cell-height: var(
+					--computed-cell-width,
+					var(--fixed-cell-size)
+				);
+			}
+
+			&.is-fixed-size {
+				--cell-width: var(--fixed-cell-size);
+				--cell-height: var(--fixed-cell-size);
+			}
 		}
 	}
 
